--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     </div>
 
     <header class="text-center pt-10 pb-6 px-4">
-        <h1 class="text-4xl font-black text-gray-900 mb-6">KLICK <span class="text-indigo-600">PRO</span></h1>
+        <h1 class="text-4xl font-black text-gray-900 mb-6">CATALOGO <span class="text-indigo-600">PRO</span></h1>
         <div class="max-w-md mx-auto relative group">
             <i class="fa-solid fa-search absolute left-4 top-3.5 text-gray-400"></i>
             <input type="text" id="buscador" placeholder="Buscar producto..." class="w-full pl-10 pr-4 py-3 rounded-full border border-gray-200 shadow-sm focus:outline-none focus:ring-2 focus:ring-indigo-500">
