Change order message title from 'KLICK PRO' to 'CATALOGO PRO'

--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@
             const baseUrl = window.location.href.split('?')[0];
             const linkVisual = `${baseUrl}?pedido=${encodeURIComponent(dataPedido)}&cliente=${encodeURIComponent(nombre)}`;
             
-            let mensaje = `*NUEVO PEDIDO - KLICK PRO* 🛍️\n\n👤 *Cliente:* ${nombre}\n📍 *Dirección:* ${direccion}\n`;
+            let mensaje = `*NUEVO PEDIDO - CATALOGO PRO* 🛍️\n\n👤 *Cliente:* ${nombre}\n📍 *Dirección:* ${direccion}\n`;
             mensaje += `--------------------------------\n🔗 *VER RESUMEN GRÁFICO (CLICK AQUÍ):* \n${linkVisual}\n--------------------------------\n\n`;
             
             carrito.forEach((p, i) => {
